admin dashboard,navBar designed

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,8 +22,16 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family:var(--font-jetbrains-mono),Arial, Helvetica, sans-serif;
+  font-family:var(--font-jetbrains-mono),var(--font-inter),var(--font-nunito), Helvetica, sans-serif;
+  /* font-family: var(--font-inter); */
 }
+.admin {
+  font-family: var(--font-inter), sans-serif;
+}
+.admin * {
+  font-family: inherit;
+}
+
 /* global.css */
 .defaultbutton {
   background-color: #963EC8; /* Purple color */
@@ -40,6 +48,24 @@ body {
 
 .defaultbutton:hover {
   background-color: #8a00d4; /* Slightly darker shade for hover effect */
+}
+
+.hide-scroll::-webkit-scrollbar{
+  display: none;
+}
+
+@keyframes scroll{
+  0%{
+    transform: translateX(-50%);
+  }
+  100%{
+    transform: translateX(100%);
+  }
+}
+
+.animate{
+  animation: scroll 10s linear;
+
 }
 
 /* Responsive adjustments */
